# YiCAD

./: AGENTS.md  CMakeLists.txt  LICENSE
YiCAD/src/main/: ApplicationWindow.cpp  ApplicationWindow.h
YiCAD/src/plugin_runtime/: HostApi.cpp  HostApi.h  PluginManager.cpp  PluginManager.h  PluginManifest.cpp  PluginManifest.h  PluginManifestReader.cpp  PluginManifestReader.h  YiCadPluginAbi.h  YiCadPluginSdk.h
doc/: PLUGIN_ABI_EVOLUTION.md  PLUGIN_SYSTEM_DESIGN.md  PLUGIN_SYSTEM_IMPLEMENTATION_PLAN.md
examples/demo_plugin/: CMakeLists.txt  DemoPlugin.cpp  README.md  YiCadDemoPlugin.def  demo.xml.example
